# ScopeBench

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml  styles.css
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflow-templates/: scopebench-getting-to-green.properties.json  scopebench-getting-to-green.yml
.github/workflows/: ci.yml  dependency-audit.yml
docs/: BLUEPRINT.md  README.md  adoption_telemetry.md  effects.md  multi_agent_session.md  plugin_marketplace.yaml  plugins.md  rubric_v1.md  templates.md
docs/adr/: README.md  template.md
docs/integrations/: adoption_starters.md  python_sdk.md
docs/notebooks/: scopebench_dataset_calibration_plugin_lab.ipynb  scopebench_quickstart_tutorial.ipynb
docs/policy/: README.md
docs/tutorials/: dataset_calibration_plugin_lab.md  interactive_quickstart_walkthrough.md
examples/: coding_bugfix.contract.yaml  coding_bugfix.plan.yaml  coding_refactor.contract.yaml  coding_refactor.plan.yaml  coding_test_stabilization.contract.yaml  coding_test_stabilization.plan.yaml  drug_research.contract.yaml  drug_research.plan.yaml  effects_legal_review.contract.yaml  effects_legal_review.plan.yaml  effects_local_maintenance.contract.yaml  effects_local_maintenance.plan.yaml  multi_agent_session.json  multi_agent_session.yaml  ops_rotate_key.contract.yaml  ops_rotate_key.plan.yaml  phone_charge.contract.yaml  phone_charge.plan.yaml  swe_fix.contract.yaml  swe_fix.plan.yaml
scopebench/: cli.py  contracts.py  domain_templates.yaml  domains.py  plan.py  plugins.py  session.py  tool_registry.yaml
scopebench/bench/: community.py  continuous_learning.py  dataset.py  fairness.py  judge.py  plugin_harness.py  rubrics.py  weekly.py
scripts/: eval_dataset.py  replay_examples.py
tests/: test_adoption_cli.py  test_api_ep10.py  test_bench_dataset_and_regression.py  test_causal.py  test_causal_rules.py  test_community_dataset_api.py  test_community_dataset_tools.py  test_continuous_learning.py  test_dataset_fairness.py  test_domains.py  test_effects_annotator.py  test_integrations_sdk.py  test_llm_judge.py  test_mvp.py  test_plugin_harness.py  test_redteam_suite.py  test_registry_templates.py  test_uncertainty.py
(+84 files in other folders)
