[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopebench"
version = "0.1.0"
description = "Plan-level proportionality enforcement (scope alignment) for tool-using agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ScopeBench contributors"}]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pip-audit>=2.7",
  "types-PyYAML>=6.0",
]

[project.scripts]
scopebench = "scopebench.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["scopebench*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
  "unit: fast, isolated tests",
  "integration: tests that compose multiple modules or external boundaries",
  "slow: longer-running tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["scopebench"]

[tool.coverage.run]
source = ["scopebench"]
